# MTCNN_Landmark106

./: LICENSE  README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: landmark106.cpp  landmark106.h  native-lib.cpp
app/src/main/java/com/example/test/: MTCNN.java  MTCNNBox.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
